@@ -1,3 +1,7 @@
+2010-10-20  Steffen Gebert  <steffen@steffen-gebert.de>
+
+	* Fixed bug #16049: Loading mask doesn't disappear on hitting Esc/cancel loading
+
 2010-10-19  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #16073: htmlArea RTE: Add paste as plain text feature
